# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  23 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Add a note to conf.d/clock for people who dual boot with Windows.

    Touchup comments in conf.d/domainname to help clear confusion.

  17 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Fix up support for NetBSD #106112 by Damian Florczyk.

    When doing a forced fsck, don't show title at startup (-T).

  16 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig and wpa_supplicant now check to see if /proc/net/wireless exists
    before checking for extensions, #106036

  14 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    netplug module renamed to netplugd for consistency

    pppd module added, #53954 thanks to Alin Nastac

  14 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Need to source init-functions.sh to provid try() for halt.sh.

  13 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Don't mount ${svcdir} with -n since / is writable at that point.

    Clean up udev tarball temp files in halt.sh #105827 by Robert Forsman.

  13 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Changed net.lo depend from isdn4linux to isdn, #102846

  12 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Split /sbin/rc into more modular pieces to allow easy porting to the bsd's.
    Thanks goes to Mike who did the initial version.

    Split out devfs and udev stuff to addons.

    Lots of syntax and quoting fixes.

    Move noblock_read() back to /sbin/rc, as its used there.

  12 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Set essid before mode for ad-hoc/master configurations, #105452

    Fixed force_any associate order option, #99256

  09 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Add PKG_CONFIG_PATH to incremental env var list #105384 by Sven Wegener.

  08 Sep 2005; Roy Marples <uberlord@gentoo.org>:
